Fixed off-centre logo

--- a/scss/_app-settings.scss
+++ b/scss/_app-settings.scss
@@ -1,2 +1,2 @@
-
 $icon-color: hsl(176, 27%, 30%);
+$brand-font-family: 'Nunito', $font-family-sans-serif;
