--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -15,7 +15,6 @@
 [class*=" flaticon-"]:after {   
 	font-family: Flaticon;
     font-style: normal;
-    margin-left: 20px;
 }
 
 .flaticon-books71:before {
