--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,10 @@ body {
     background-color: $white;
 }
 
+.brand-font {
+    font-family: $brand-font-family
+}
+
 .login {
     margin-top: 2rem;
     padding: 2rem;
